Initial setup of govbr-ds-angular library with core components and example app

--- a/projects/govbr-ds-angular/src/lib/components/menu/menu.component.html
+++ b/projects/govbr-ds-angular/src/lib/components/menu/menu.component.html
@@ -8,7 +8,7 @@
 			</div>
 		</div>
 		<nav class="menu-body">
-			@for (lvl1 of list; track $index) {
+			@for (lvl1 of list(); track $index) {
 				@if (!lvl1.children) {
 					<ng-container [ngTemplateOutlet]="menuItem" [ngTemplateOutletContext]="{ $implicit: lvl1 }"></ng-container>
 				} @else {
